Fix avatar not showing on pantheon desktop

--- a/gtk-3.0/apps/_pantheon.scss
+++ b/gtk-3.0/apps/_pantheon.scss
@@ -271,13 +271,13 @@ LibraryWindow {
 *********/
 
 .avatar {
-  border: 1px solid transparentize(#000, 0.35);
+  border: 1px solid transparentize(#000, 0.77);
   border-radius: 50%;
   box-shadow:
-      inset 0 0 0 1px transparentize(#fff, 0.05),
-      inset 0 1px 0 0 transparentize(#fff, 0.45),
-      inset 0 -1px 0 0 transparentize(#fff, 0.15),
-      0 1px 3px transparentize(#000, 0.12),
-      0 1px 2px transparentize(#000, 0.24);
+      inset 0 0 0 1px transparentize(#fff, 0.95),
+      inset 0 1px 0 0 transparentize(#fff, 0.55),
+      inset 0 -1px 0 0 transparentize(#fff, 0.85),
+      0 1px 3px transparentize(#000, 0.88),
+      0 1px 2px transparentize(#000, 0.77);
 }
 
