--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -5748,9 +5748,9 @@ LibraryWindow .the-button-in-the-combobox {
 * Avatar *
 *********/
 .avatar {
-  border: 1px solid rgba(0, 0, 0, 0.65);
+  border: 1px solid rgba(0, 0, 0, 0.23);
   border-radius: 50%;
-  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.95), inset 0 1px 0 0 rgba(255, 255, 255, 0.55), inset 0 -1px 0 0 rgba(255, 255, 255, 0.85), 0 1px 3px rgba(0, 0, 0, 0.88), 0 1px 2px rgba(0, 0, 0, 0.76); }
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05), inset 0 1px 0 0 rgba(255, 255, 255, 0.45), inset 0 -1px 0 0 rgba(255, 255, 255, 0.15), 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.23); }
 
 /********
 * Unity *
